--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@mantine/core": "5.1.4",
     "@mantine/hooks": "5.1.4",
     "@mantine/next": "5.1.4",
+    "@tanstack/react-query": "^4.8.0",
+    "axios": "^0.27.2",
     "next": "12.2.5",
     "nprogress": "0.2.0",
     "react": "18.2.0",
