--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mantine/next": "5.1.4",
     "@tanstack/react-query": "^4.8.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "next": "12.2.5",
     "nprogress": "0.2.0",
     "react": "18.2.0",
