--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mantine/core": "5.1.4",
     "@mantine/hooks": "5.1.4",
     "@mantine/next": "5.1.4",
+    "@sentry/nextjs": "^7.14.1",
     "@tanstack/react-query": "^4.8.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
